@@ -2,6 +2,9 @@ VERSION=0.77.1-20050822
 THISDIR=branch_0
 HOME=.
 
+.PHONY: choosetarget pentium3 pentium4 athlon x86_64 x86_32 ppc doc \
+        x86common common clean snapshot test
+
 choosetarget :
 	@echo "Possible targets are:"
 	@echo "	pentium3              	 Intel Pentium 3"
@@ -24,43 +27,41 @@ athlon :
 	@ARCH="athlon" $(MAKE) x86common
 
 x86_64 :
-	@TARGET="x86_64" ARCH="k8" $(MAKE) common
-	
+	ARCH="k8" $(MAKE) common
+
 x86_32 :
-	@TARGET="x86_64" ARCH="athlon" $(MAKE) common
+	ARCH="athlon" $(MAKE) common
 ppc :
-	@TARGET="ppc" ARCH="970" $(MAKE) common
+	ARCH="970" $(MAKE) common
 
 doc :
-	@cd doc/ggnfs-doc && $(MAKE)
+	$(MAKE) -C doc/ggnfs-doc
 
 EXCLUDE_FILES=*.tar *.fb spairs.out* core msdebug.txt maplesyntax rels.bin* \
               cols* lpindex* *.pdf rels.bin.* lpindex* *.afb.0 relations.jpg
 EXCLUDE=$(foreach opt,$(EXCLUDE_FILES),--exclude=$(opt))
 
-x86common : src ;
+x86common :
 	echo "#define GGNFS_VERSION \"$(VERSION)-$(ARCH)\"" > include/version.h
 	@cd src/lasieve4 && rm -f -r asm && ln -s piii asm
 	@ARCH=$(ARCH) $(MAKE) -C src -f Makefile.x86
 
-common : src ;
+common :
 	echo "#define GGNFS_VERSION \"$(VERSION)-$(ARCH)\"" > include/version.h
-	@ARCH=$(ARCH) $(MAKE) -C src -f Makefile.$(TARGET)
+	@ARCH=$(ARCH) $(MAKE) -C src
 
-clean : ;
-	rm -f include/version.h
+clean :
+	-rm -f include/version.h
 	$(MAKE) -C src -f Makefile.x86 clean
-	$(MAKE) -C src -f Makefile.x86_64 clean
-	$(MAKE) -C src -f Makefile.ppc clean
-	rm -rf core ggnfs-*.tar.gz
+	$(MAKE) -C src clean
+	-rm -rf core ggnfs-*.tar.gz
 	cd ./tests; sh cleanup.sh
 
-snapshot : clean ;
-	echo "#define GGNFS_VERSION \"$(VERSION)\"" > include/version.h
+snapshot : clean
 	echo $(VERSION) > Version; date -u >> Version
-	tar cvf ggnfs-$(VERSION).tar -C ../ $(EXCLUDE) ./$(THISDIR)/ 
+	tar cvf ggnfs-$(VERSION).tar -C ../ $(EXCLUDE) ./$(THISDIR)/
 	gzip ggnfs-$(VERSION).tar
 
-test : ;
+test :
 	echo $(EXCLUDE)
 
