@@ -1,12 +1,14 @@
 P1=ggnfs-doc
 
-all : $(P1).pdf ;
+.PHONY: all clean squeaky
 
-$(P1).pdf : $(P1).tex ;
+all : $(P1).pdf
+
+$(P1).pdf : $(P1).tex
 # Apparently, latex needs to be run at least once to create
 # references and table of contents, which pdflatex seems to be having
 # trouble with.
-#	latex $(P1).tex 
+#	latex $(P1).tex
 	pdflatex $(P1).tex
 	pdflatex $(P1).tex
 	mv $(P1).pdf ..
@@ -17,11 +19,12 @@ $(P1).ps : $(P1).tex
 #	bibtex $(P1)
 	latex $(P1).tex
 	dvips -o $(P1).ps $(P1).dvi
-	cp $(P1).ps .. ; 
+	cp $(P1).ps .. ;
 	rm reltst150.eps
 
-clean : ;
-	rm -f *.aux *.log *.blg
+clean :
+	-rm -f *.aux *.log *.blg
 
-squeaky : clean ;
-	rm -f $(P1).ps $(P1).dvi $(P1).bbl $(P1).pdf $(P1).toc reltst150.eps
+squeaky : clean
+	-rm -f $(P1).ps $(P1).dvi $(P1).bbl $(P1).pdf $(P1).toc reltst150.eps
+
